--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,3 +126,58 @@
         opacity: 1;
     }
 }
+
+#categories{
+    width: 100%;
+    height: auto;
+    max-height: 60vh;
+    margin-top: 38px;
+    margin-bottom: 38px;
+    h2, p{
+        text-align: center;
+    }
+
+    h2{
+        font-size: 28px;
+    }
+
+    p{
+        margin-top: -5px;
+        font-size: 12px;
+    }
+
+    .container{
+        width: 80%;
+        max-width: 1440px;
+        height: auto;
+        margin: auto;
+        margin-top: 10px;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        .category-card{
+            cursor: pointer;
+            width: 250px;
+            height: 350px;
+            overflow: hidden;
+            border-radius: 12px;
+            box-shadow: 0 0 2px 0 rgba(0,0,0,0.6);
+
+            img{
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
+            }
+
+            .category-text{
+                h4{
+                    text-align: center;
+                    font-size: 18px;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+}
