--- a/CSS/header.css
+++ b/CSS/header.css
@@ -10,13 +10,18 @@
 }
 
 header {
-    padding: 10px;
+    background-color: var(--bg-color);
     height: 80px;
     width: 100vw;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
     border-bottom: 1px solid lightgray;
+    
     .container {
         width: 80%;
         max-width: 1440px;
