--- a/CSS/style.css
+++ b/CSS/style.css
@@ -130,9 +130,7 @@
 #categories{
     width: 100%;
     height: auto;
-    max-height: 60vh;
-    margin-top: 38px;
-    margin-bottom: 38px;
+    margin: 38px auto;
     h2, p{
         text-align: center;
     }
@@ -149,7 +147,7 @@
     .container{
         width: 80%;
         max-width: 1440px;
-        height: auto;
+        height: 100%;
         margin: auto;
         margin-top: 10px;
         display: flex;
@@ -176,6 +174,168 @@
                     text-align: center;
                     font-size: 18px;
                     font-weight: 600;
+                }
+            }
+        }
+    }
+}
+
+#Shop{
+    width: 100%;
+    height: auto;
+    margin: 38px auto;
+    h2, p{
+        text-align: center;
+    }
+
+    h2{
+        font-size: 28px;
+    }
+
+    p{
+        margin-top: -5px;
+        font-size: 12px;
+    }
+
+    .products-header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 80%;
+        max-width: 1440px;
+        margin: auto;
+        margin-top: 24px;
+
+        h3{
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        a{
+            color: var(--mute-font-color);
+            font-size: 14px;
+        }
+
+        a:hover{
+            color: var(--primary-color);
+            text-decoration: underline;
+        }
+    }
+
+    .daily-container,
+    .bakery-container{
+        width: 80%;
+        max-width: 1440px;
+        height: auto;
+        margin: auto;
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 2fr));
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        .product-card{
+            width: 150px;
+            height: 210px;
+            box-shadow: inset 0 0 2px rgba(0,0,0,0.6);
+            overflow: hidden;
+            border-radius: 6px;
+            padding: 6px;
+            position: relative;
+
+            img{
+                width: 100%;
+                height: 50%;
+                object-fit: contain;
+            }
+
+            .product-text{
+                height: 50%;
+                display: flex;
+                flex-direction: column;
+                h4{
+                    font-size: 12px;
+                    font-weight: 600;
+                }
+
+                .price{
+                    margin-top: 10px;
+                    display: flex;
+                    gap: 4px;
+                    position: relative;
+                    width: 50px;
+                    p{
+                        font-size: 24px;
+                    }
+
+                    span{
+                        font-size: 12px;
+                    }
+                }
+            }
+
+            button{
+                position: absolute;
+                height: 20px;
+                width: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                top: 10px;
+                right: 10px;
+                font-size: 14px;
+                background-color: transparent;
+                border-radius: 50%;
+                border: 1px solid var(--primary-color);
+                color: var(--primary-color);
+                cursor: pointer;
+            }
+
+            button:hover{
+                opacity: 0.8;
+            }
+        }
+    }
+}
+
+@media  screen and (max-width:991px) {
+    #home{
+        height: auto;
+    }
+
+    #categories{
+        width: 90%;
+        height: auto;
+
+        .container{
+            width: 90%;
+        }
+    }
+
+    #Shop{
+        .container{
+            width: 90%;
+            gap: 6px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #Shop{
+        .daily-container{
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            .product-card{
+                width: 100px;
+                height: auto;
+
+                img{
+                    height: 30%;
+                }
+                .product-text{
+                    h4{
+                        font-size: 10px;
+                    }
                 }
             }
         }
