--- a/CSS/style.css
+++ b/CSS/style.css
@@ -238,7 +238,7 @@
         .product-card{
             width: 150px;
             height: 210px;
-            box-shadow: inset 0 0 2px rgba(0,0,0,0.6);
+            box-shadow: 2px 2px 50px rgba(0, 67, 101, 0.08);
             overflow: hidden;
             border-radius: 6px;
             padding: 6px;
